--- a/requirements-server.txt
+++ b/requirements-server.txt
@@ -1,7 +1,7 @@
 rich
 websockets
-numpy==1.23.3
-typeguard==2.13.3
-sherpa_onnx==1.5.4
-funasr_onnx==0.0.6
-kaldi-native-fbank==1.17
+numpy
+typeguard
+sherpa_onnx
+funasr_onnx
+kaldi-native-fbank
